--- a/Main.html
+++ b/Main.html
@@ -8,14 +8,26 @@
 </head>
 
 <body>
-    <div class="log">
-        <a>
-            Signup
+    <div class="first">
+        <div id="update">
+
+        </div>
+        <a href="Main.html" id="main">
+            <img src="main.PNG">
         </a>
-        <a>
-            Login
-        </a>
+
+        <div class="log">
+            <a>
+                Signup
+            </a>
+
+            <a>
+                Login
+            </a>
+        </div>
     </div>
+
+
     <div class="list">
         <a>
             walkthrought
@@ -23,9 +35,9 @@
         <a>
             collection
         </a>
-        <a href="Main.html" id="main">
+        <!-- <a href="Main.html" id="main">
             <img src="main.PNG">
-        </a>
+        </a> -->
 
         <a>
             Community
@@ -38,7 +50,7 @@
         news
     </h1>
     <div class="news">
-        <a id="test">
+        <!-- <a id="test">
             <img height="325" width="485" alt="test" src="test.jpg">
         </a>
         <a id="test2">
@@ -46,7 +58,7 @@
         </a>
         <a id="test3">
             <img height="324" width="575" alt="test2" src="test3.jpg">
-        </a>
+        </a> -->
     </div>
 
 
