--- a/post_list.html
+++ b/post_list.html
@@ -30,7 +30,8 @@
             <li>No.</li>
             <li>Subject</li>
             <li></li>
-            <li>time</li>
+            <li>Time</li>
+            <li>Name</li>
         </ul>
 
         <ul type="hidden" class="mylist">
@@ -63,9 +64,11 @@
                     </li>
                     <li></li>
                     <li>2021/9/12</li>
+                    <li>zzz2332</li>
                 </ul>
             </li>
         </ul>
+        <a id="plus" href="{{ url_for('main.create') }}" class="create">Post<img src="image/plus.png"></a>
     </div>
 </body>
 
